UBO-416 Migrate to MyCoRe 2024.06.x (#474)
* UBO-416 Set mycore version to 2024.06.1-SNAPSHOT

* UBO-416 Do not use already deprecated api

* UBO-416 Set <maven.compiler.release>21</maven.compiler.release>

* UBO-416 Removed dependency to httpclient/core 4.x

* UBO-416 Replaced new URL() by new URI().toURL()

# Conflicts:
#	ubo-common/src/main/java/org/mycore/ubo/lsf/LSFService.java

* UBO-416 Added UBO.DeduplicationKeyManager = org.mycore.ubo.dedup.jpa.DeduplicationKeyManager to mycore.properties

* UBO-416 Added JPA configuration to mycore.properties. Removed persistence.xml and its parent directory test/resources/META-INF

* UBO-416 Updated README.md

* UBO-416 Updated maven-pr.yml and maven-publish-*.yml to support Java 21

* UBO-416 Updated README.md, added empty JPA properties to mycore.properties

* UBO-416 Used property variable for default transformer factory instead of class name

* UBO-416 Updated property MCR.JPA.MappingFileNames

* UBO-416 Removed invocation of deprecated CloseableHttpResponse

* UBO-416 Removed duplicate property java.target.version

* UBO-432 Fixed reading of user's orcid settings

* UBO-432 Updated orcid revoke endpoint

* UBO-432 Updated orcid endpoints

* UBO-432 Applied requested changes regarding MCR.JPA.MappingFileNames

* UBO-416 Set mycore version to 2024.06.2-SNAPSHOT

* UBO-416 ORCID: check if user is in relation with publication before displaying "Submit to ORCID" button

* UBO-416 ORCID: Updated property name MCR.ORCID2.Work.CreateFirstWork => MCR.ORCID2.WorkEventHandler.CreateFirstWork

* UBO-416 ORCID: Set MCR.ORCID2.Work.SourceURL = %MCR.baseurl%receive/

* UBO-416 ORCID: Use PUT for update work

* UBO-416 Migrate to MyCoRe: Update Solr configuration and Docker setup to support solr-cloud

* UBO-416 Fixed solr properties MCR.Solr.Core.projects.ConfigSetTemplate=ubo_projects and MCR.Solr.Core.projects.Type=ubo_projects

---------

Co-authored-by: Sebastian Hofmann <sebastian.hofmann@gbv.de>